Uploading screenshots, fixed HS score page visibility

--- a/assets/css/jstyle.css
+++ b/assets/css/jstyle.css
@@ -55,7 +55,7 @@ body {
     color: white;
     font-size: 25px;
     text-align: center;
-    box-shadow: 1px 10px 5px black;
+    box-shadow: 1px 2px 15px black;
 }
 
 .all_btn:hover{
@@ -98,12 +98,12 @@ ul{
   
 .myBtn{
     background: var(--button-color);
-    padding: 0px;
+    padding: 5px;
     margin: 5px;
     border: 1px solid cornsilk;
     border-radius: 5px;
     color: white;
-    font-size: 5px;
+    font-size: 20px;
 }
 
 
@@ -152,8 +152,6 @@ and(max-width: 540px) {
         color: white;
         font-size: 5px;
         text-align: center;
-
-
 
     }
      .main {
